--- a/index.css
+++ b/index.css
@@ -8,7 +8,12 @@ body {
   background-color: hsl(20, 50%, 98%);
   padding: 3rem 1rem;
   font-family: "Red Hat Text", sans-serif;
-  /* padding: 1rem 2rem; */
+  padding: 1rem 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
 
 #image {
@@ -93,7 +98,7 @@ h3 {
 }
 
 .add-to-cart h3:hover {
-  color: red;
+  color: hsl(14, 86%, 42%);
 }
 
 .add-to-cart img {
@@ -128,17 +133,14 @@ h3 {
   }
 }
 
-.add-to-cart-1 img:hover {
-  /* background-color: #fff;
-  color: red; */
-}
+
 
 /* Cart Box */
 
 .cart-box-filled {
   width: 420px;
   background-color: white;
-  height: 470px;
+  height: 490px;
   padding: 1rem 1rem;
   border-radius: 7px;
 }
@@ -160,6 +162,7 @@ h3 {
   justify-content: center;
   flex-direction: column;
   margin-top: 10px;
+  height: auto;
 }
 
 .cart-box {
@@ -315,15 +318,14 @@ section p {
 }
 
 .item-box {
-  width: 440px;
-  height: 40vh;
+  height: auto;
   background-color: hsl(15, 22%, 96%);
-  margin-top: 25px;
+  margin-top: 20px;
   padding: 1rem 1rem;
   border-radius: 15px;
+  gap: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
 }
 
 .item {
@@ -365,7 +367,6 @@ hr {
   color: hsl(14, 25%, 72%);
   margin-left: 15px;
 }
-/* <h6>${itemlist.quantity} ${itemlist.price}</h6> */
 
 .item-order p {
   color: black;
@@ -406,6 +407,15 @@ section .new-order-btn {
     top: 50%;
     opacity: 1;
   }
+}
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+
+.attribution a {
+  color: hsl(228, 45%, 44%);
 }
 
 /* MOBILE DESIGN */
@@ -451,30 +461,17 @@ section .new-order-btn {
     width: 320px;
   }
 
-  .carbon-box {
-    /* width: 100%; */
-  }
-
   .food-price {
     width: 20%;
   }
 
   section {
     width: 100%;
-    /* margin-top: 40px; */
     left: 0%;
-  }
-
-  .item-box {
-    width: 350px;
   }
 
   .confirm-box {
     width: 100%;
     height: 80vh;
-  }
-
-  .new-order-btn {
-    /* width: 1%; */
   }
 }
